--- a/templates/owner/dashboard.html
+++ b/templates/owner/dashboard.html
@@ -697,7 +697,15 @@
                     <div class="homestay-detail">
                         <i class="fas fa-money-bill"></i>
                         <span>
-                            {% if home.price_per_hour and home.price_per_hour > 0 %}
+                            {% if home.price_first_2_hours and home.price_first_2_hours > 0 %}
+                                {% if home.price_per_day and home.price_per_day > 0 %}
+                                    {{ "{:,.0f}".format(home.price_first_2_hours * 1000) }}đ /2h, {{ "{:,.0f}".format(home.price_per_day * 1000) }}đ /ngày
+                                {% else %}
+                                    {{ "{:,.0f}".format(home.price_first_2_hours * 1000) }}đ /2h đầu
+                                {% endif %}
+                            {% elif home.price_per_day and home.price_per_day > 0 %}
+                                {{ "{:,.0f}".format(home.price_per_day * 1000) }}đ /ngày
+                            {% elif home.price_per_hour and home.price_per_hour > 0 %}
                                 {{ "{:,.0f}".format(home.price_per_hour * 1000) }}đ /giờ
                             {% elif home.price_per_night and home.price_per_night > 0 %}
                                 {{ "{:,.0f}".format(home.price_per_night * 1000) }}đ /đêm
